--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,19 +2,17 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <title><%= config.name %></title>
-    </head>
-    <body>
-  <h1><%= config.name %></h1>
-  <h2>Version <%= config.version %></h2>
-  <p>
-    <%= config.description %>
-  </p>
-  <p>
-    Pour plus de détails :
-    <ul>
-      <li><a href="https://github.com/romulusFR/lifap5-backend-2019-2020#readme">le projet sur GitHub</a></li>
-      <li><a href="https://liris.cnrs.fr/~rthion/dokuwiki/doku.php?id=enseignement:lifap5:start">la page de l'unité d'enseignement</a></li>
-    </ul>
-  </p>
+    <title><%= appname %></title>
+  </head>
+  <body>
+    <h1><%= appname %></h1>
+    <h2>Version <%= version %></h2>
+    <p><%= description %></p>
+    <p>Pour plus de détails :
+      <ul>
+        <li><a href="https://github.com/romulusFR/lifap5-backend-2019-2020#readme">le projet sur GitHub</a></li>
+        <li><a href="https://liris.cnrs.fr/~rthion/dokuwiki/doku.php?id=enseignement:lifap5:start">la page de l'unité d'enseignement</a></li>
+      </ul>
+    </p>
+  </body>
 </html>
