docs: ajout lien doc

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
       <ul>
         <li><a href="https://github.com/romulusFR/lifap5-backend-2019-2020#readme">le projet sur GitHub</a></li>
         <li><a href="https://liris.cnrs.fr/~rthion/dokuwiki/doku.php?id=enseignement:lifap5:start">la page de l'unité d'enseignement</a></li>
+        <li><a href="/api-docs">la documentation de l'API serveur</a></li>
       </ul>
     </p>
   </body>
