refactor: simplification avec app.locals

--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%- include('includes/head', { appname, version} ) -%>
+  <%- include('includes/head', { description, version} ) -%>
   <body>
     <%- include('includes/title', { appname, version} ) -%>
     <h3>ERROR <%= status %> (<%= name %>)</h3>
