--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%- include('includes/head', { appname, version} ) -%>
+  <%- include('includes/head') -%>
   <body>
-    <%- include('includes/title', { appname, version} ) -%>
+    <%- include('includes/title') -%>
     <p><%= description %></p>
     <p>Pour plus de détails :
       <ul>
