feat: ajout du client dans les dossiers static

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,6 +9,7 @@
         <li><a href="https://github.com/romulusFR/lifap5-backend-2019-2020#readme">le projet sur GitHub</a></li>
         <li><a href="https://liris.cnrs.fr/~rthion/dokuwiki/doku.php?id=enseignement:lifap5:start">la page de l'unité d'enseignement</a></li>
         <li><a href="/api-docs">la documentation de l'API serveur</a></li>
+        <li><a href="/client">le client de départ</a></li>
       </ul>
     </p>
   </body>
