feat: màj index

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,13 +4,18 @@
   <body>
     <%- include('includes/title') -%>
     <p><%= description %></p>
-    <p>Pour plus de détails :
+    Pour plus de détails :
       <ul>
-        <li><a href="https://github.com/romulusFR/lifap5-backend-2019-2020#readme">le projet sur GitHub</a></li>
+        <li><a href="https://github.com/romulusFR/lifap5-backend-2019-2020#readme">l'intégralité du projet sur GitHub</a></li>
+        <ul>
+          <li><a href="https://github.com/romulusFR/lifap5-backend-2019-2020/blob/master/SUJET.md">le sujet du projet avec la description du travai là faire</a></li>
+          <li><a href="/api-docs">la documentation de l'API serveur</a></li>
+          <li><a href="/client">le client de départ</a> (<a href="/client.zip">fichier zip à télécharger</a>)</li>
+        </ul>
+        
         <li><a href="https://liris.cnrs.fr/~rthion/dokuwiki/doku.php?id=enseignement:lifap5:start">la page de l'unité d'enseignement</a></li>
-        <li><a href="/api-docs">la documentation de l'API serveur</a></li>
-        <li><a href="/client">le client de départ</a> (<a href="/client.zip">fichier zip à télécharger</a>)</li>
+        
       </ul>
-    </p>
+
   </body>
 </html>
