docs: update liens sujet

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,18 +4,36 @@
   <body>
     <%- include('includes/title') -%>
     <p><%= description %></p>
-    Pour plus de détails :
-      <ul>
-        <li><a href="https://github.com/romulusFR/lifap5-backend-2019-2020#readme">l'intégralité du projet sur GitHub</a></li>
-        <ul>
-          <li><a href="https://github.com/romulusFR/lifap5-backend-2019-2020/blob/master/SUJET.md">le sujet du projet avec la description du travai là faire</a></li>
-          <li><a href="/api-docs">la documentation de l'API serveur</a></li>
-          <li><a href="/client">le client de départ</a> (<a href="/client.zip">fichier zip à télécharger</a>)</li>
-        </ul>
-        
-        <li><a href="https://liris.cnrs.fr/~rthion/dokuwiki/doku.php?id=enseignement:lifap5:start">la page de l'unité d'enseignement</a></li>
-        
-      </ul>
 
+    <ul>
+      <li>
+        <a href="https://github.com/romulusFR/lifap5-backend-2019-2020/blob/master/SUJET.md">le sujet du projet</a>
+      </li>
+      <li>
+        <a href="https://github.com/romulusFR/lifap5-backend-2019-2020/blob/master/client/README.md"
+          >le travail à faire</a
+        >
+        :
+        <ul>
+          <li>
+            un <a href="/client">client de départ</a> vous est fourni (<a href="/client.zip">archive zip</a> à
+            télécharger)
+          </li>
+        </ul>
+      </li>
+      <li><a href="/api-docs">la documentation de l'API serveur</a></li>
+    </ul>
+
+    <p>Pour plus de détails :</p>
+    <ul>
+      <li>
+        <a href="https://liris.cnrs.fr/~rthion/dokuwiki/doku.php?id=enseignement:lifap5:start"
+          >la page de l'unité d'enseignement</a
+        >
+      </li>
+      <li>
+        <a href="https://github.com/romulusFR/lifap5-backend-2019-2020#readme">l'intégralité du projet sur GitHub</a>
+      </li>
+    </ul>
   </body>
 </html>
