docs: ajout de la FAQ

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -21,6 +21,9 @@
           </li>
         </ul>
       </li>
+      <li>
+        <a href="https://github.com/romulusFR/lifap5-backend-2019-2020/blob/master/FAQ.md">la Foire Aux Questions</a>
+      </li>
       <li><a href="/api-docs">la documentation de l'API serveur</a></li>
     </ul>
 
